--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
 } 
   
 h1 {
-  color: #58a8c7;
+  color: #8ccde7;
   font-family: 'Space Mono', monospace;
   font-size: 3rem;
   text-align: center;
@@ -39,7 +39,7 @@ form {
 }
   
 .btn a {
-    color:#81abe9;
+    color:#97b8e9;
   font-family: 'Open Sans', sans-serif;
   font-size: 1rem;
   font-weight: 300;
@@ -49,7 +49,7 @@ form {
 }
 
 .btn:hover {
-  box-shadow: 0 4px #81abe9;
+  box-shadow: 0 4px #9db7dd;
   top: 2px; 
 }
 
